<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="Bienvenido al home del Inversionista. Aqui podras realizar las siguientes operaciones:"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonOportunidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonOportunidades" />

    <Button
        android:id="@+id/buttonInversiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonMisInversiones" />

    <Button
        android:id="@+id/buttonMiCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonMiCuenta" />

</LinearLayout>