<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="Bienvenido Ofertante a la aplicación. Aqui puedes seleccionar la opción que requieras:"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPublicarFacturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPublicarFacturas"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFacturasVendidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFacturasVendidas"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMiCuentaOfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonMiCuenta"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>